# spotifygpt

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
data/sample/: StreamingHistory0.json  StreamingHistory1.json  liked.json  playlists.json
data/sample_gdpr/: endsong_0.json
src/spotifygpt/: __init__.py  __main__.py  alerts.py  audio_features.py  auth.py  behavior_hook.py  behavior_orchestrator.py  classification.py  cli.py  context_engine.py  daily_mode.py  diurnal.py  import_streaming_history.py  importer.py  ingest_status.py  manual_import.py  metrics.py  musical_dna.py  novelty_budget.py  novelty_sequencer.py  pipeline.py  profile.py  recommendation_pipeline.py  session_state.py  sync_v2.py  token_store.py  weekly_radar.py
tests/: test_alerts.py  test_audio_features.py  test_auth.py  test_behavior_hook.py  test_behavior_orchestrator.py  test_classification.py  test_cli_auth.py  test_cli_backfill_features.py  test_cli_ingest_status.py  test_cli_musical_dna.py  test_cli_pipeline.py  test_cli_simulate_novelty.py  test_cli_simulate_session.py  test_cli_simulate_session_novelty.py  test_context_engine.py  test_daily_mode.py  test_diurnal.py  test_import_gdpr.py  test_import_streaming_history.py  test_importer.py  test_ingest_status.py  test_manual_import.py  test_metrics.py  test_musical_dna.py  test_novelty_budget.py  test_novelty_sequencer.py  test_profile.py  test_recommendation_pipeline.py  test_session_state.py  test_sync_v2.py  test_token_store.py  test_version.py  test_weekly_radar.py
